--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   db: # postgres
     image: postgres:12
@@ -38,7 +37,8 @@ services:
       context: .docker
       dockerfile: api.Dockerfile
     container_name: "account_api"
-    ports: ["12340:12340"]
+    ports:
+      -  "12340:12340"
     volumes: [./api:/hasura]
     env_file: [./settings/dev/api.env]
     depends_on:
@@ -52,7 +52,8 @@ services:
       context: .docker
       dockerfile: frontend.Dockerfile
     container_name: account_front
-    ports: [12345:12345]
+    ports: 
+      -  "12345:12345"
     command: sh -c "npm install && npm run dev"
     volumes: [.:/repo]
     env_file: [./settings/dev/front.env]
