--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,9 @@
     "eslint": "8.42.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
-    "next": "13.4.4",
+    "next": "14.2.3",
     "next-auth": "^4.22.1",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
